// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<button
  disabled={false}
  onClick={[Function]}
  styleName="button"
  type="button"
>
  <span
    styleName="content-wrapper"
  >
    <FaClose
      styleName="icon"
    />
  </span>
</button>
`;

exports[`should render correctly when disabled 1`] = `
<button
  disabled={true}
  onClick={[Function]}
  styleName="button"
  type="button"
>
  <span
    styleName="content-wrapper"
  >
    <FaClose
      styleName="icon"
    />
  </span>
</button>
`;
